Fix ambigious parse of nation id